--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -10,9 +10,19 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   
+  <!-- Listener -->
+  <listener>
+  	<listener-class>chap20.ServletContextListener03</listener-class>  	
+  </listener>
+  
   <context-param>
   	<param-name>initParamName1</param-name>
   	<param-value>initParamValue1</param-value>
+  </context-param>
+  
+  <context-param>
+  	<param-name>adminEmail</param-name>
+  	<param-value>admin123@gmail.com</param-value>
   </context-param>
   
   <session-config>
@@ -172,4 +182,5 @@
   	<filter-name>filter05</filter-name>
   	<url-pattern>/s5/memberOnly</url-pattern>
   </filter-mapping>
+  
 </web-app>
