--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -172,8 +172,9 @@
   <filter-mapping>
   	<filter-name>filter04</filter-name>
   	<url-pattern>/s5/*</url-pattern>
+  	<url-pattern>/board/*</url-pattern>
   </filter-mapping>
-  
+    
   <filter>
   	<filter-name>filter05</filter-name>
   	<filter-class>chap19.Filter05</filter-class>
